--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -255,7 +255,7 @@ html {
 .our-friends-block {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: space-between;
 }
 
