--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -94,7 +94,7 @@
   }
   .our-friends-button {
     padding: 0;
-    margin-top: 65px;
+    /* margin-top: 65px; */
     width: 260px;
     height: 52px;
   }
@@ -275,6 +275,9 @@
     padding-top: 25px;
     height: 974px;
   }
+  .about-content {
+    padding-bottom: 16px;
+  }
   .about-title {
     font-size: 25px;
     padding-bottom: 24px;
@@ -295,10 +298,6 @@
   }
   .about-image3 {
     display: block;
-    /* padding-top: 0;
-    margin-top: 0; */
-    /* padding-bottom: 238px; */
-    /* margin-bottom: 200px; */
   }
 
   /* ----------------------------OUR FRIENDS---------------------------- */
@@ -357,23 +356,57 @@
     font-size: 25px;
     line-height: 130%;
   }
-  .help-block {
+  /* .help-block {
     display: flex;
     flex-wrap: wrap;
-    height: 555px;
+    justify-content: center;
+    height: 281px;
+    column-gap: 120px;
+    align-items: center;
+  } */
+  .help-block {
+    /* height: 555px; */
+    margin-left: 15px;
+    column-gap: 30px;
+    /* row-gap: -12px; */
+    /* row-gap: 10px; */
+    justify-content: flex-start;
+    /* padding: 0; */
+    /* display: flex; */
+    /* flex-w 15px
+    rap: wrap; */
+    /* padding: 0 15px; */
+    /* gap: 0 10px 10px 10px; */
     /* width: 290px; */
     /* margin-left: 12px; */
-
+    /* justify-content: baseline; */
+    /* justify-content: space-evenly; */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* column-gap: 20px; */
     /* column-gap: 60px; */
     /* flex-direction: column; */
-    /* justify-content: center; */
+    /* left: 0;
+    right: 0; */
     /* height: 281px; */
     /* column-gap: 180px; */
     /* align-items: center; */
   }
   .icon {
-    /* margin-bottom: 15px; */
-    column-gap: 10px;
+    /* padding-top: 30px; */
+    /* padding-bottom: 40px; */
+    /* padding-bottom: -10px; */
+    /* row-gap: 60px; */
+    /* margin-top: 10px; */
+    /* margin-bottom: 25px; */
+    /* padding-top: 60px; */
+    /* padding-bottom: 0; */
+    /* column-gap: 30px; */
+    /* column-gap: 100px; */
+    /* padding-top: 20px; */
+    /* margin-bottom: 20px; */
+    /* column-gap: 25px;
+    row-gap: 20px; */
     /* background-repeat: no-repeat;
     background-position: center; */
     /* width: 30px;
@@ -384,23 +417,36 @@
     align-items: center;
     justify-content: center; */
     /* margin-right: 2px; */
+    /* margin-top: 20px; */
+    margin-bottom: 15px;
   }
   .help-text {
+    /* row-gap: 30px; */
+    /* column-gap: 20px; */
     font-size: 15px;
     line-height: 110%;
     /* padding-right: 30px; */
-
     /* margin-right: 10px; */
-    /* width: 130px; */
+    width: 130px;
+    /* padding-bottom: 10px; */
+    /* padding-top: 10px; */
+    /* margin-top: 10px; */
+    /* margin-bottom: 10px; */
+    /* margin-top: -10px; */
     /* margin-left: 10px; */
   }
   .help-box {
-    width: 130px;
-    /* margin-bottom: 10px; */
-    /* column-gap: 25px; */
+    /* width: 130px; */
+    /* padding-top: 20px; */
+    /* padding-bottom: 20px; */
+    margin-bottom: 25px;
+    /* margin-bottom: 55px; */
+    /* column-gap: 5px; */
+    /* height: 87px; */
     /* column-gap: 15px; */
     /* margin-bottom: 57px; */
   }
+
   .help-icon1 {
     background-image: url("../../assets/icons/pet-food-320.svg");
   }
@@ -427,5 +473,115 @@
   }
   .help-icon9 {
     background-image: url("../../assets/icons/sleeping-area-320.svg");
+  }
+
+  /* ----------------------------IN ADDITION---------------------------- */
+  .in-addition-container {
+    height: 542px;
+    padding-top: 41px;
+  }
+  .in-addition-title {
+    font-size: 25px;
+    text-align: center;
+    padding-bottom: 20px;
+    /* margin-bottom: 37px; */
+  }
+  .in-addition-text {
+    /* padding-top: 1px; */
+    /* padding-bottom: 2px; */
+    /* line-height: 110%; */
+    letter-spacing: 0;
+    line-height: 160%;
+    text-align: center;
+  }
+
+  .in-addition-text-transparent {
+    text-align: justify;
+    padding-left: 18px;
+    padding-right: 20px;
+  }
+  .credit-button {
+    width: 281px;
+    margin-left: 18px;
+    /* padding: 8px 11px; */
+    height: 43px;
+    border-radius: 9px;
+    border: none;
+    /* margin: 20px 0; */
+    /* padding-left: 58px; */
+    /* position: relative; */
+    /* padding: 0; */
+    /* display: flex; */
+    /* justify-content: space-around; */
+
+    /* 
+    padding-top: 32px; */
+  }
+  .credit-link {
+    font-size: 15px;
+    line-height: 110%;
+    transition: 0.7s;
+    /* margin-left: 40px; */
+  }
+  .in-addition-image {
+    display: none;
+  }
+  .in-addition-image3 {
+    display: block;
+    padding-top: 42px;
+  }
+
+  /* ----------------------------FOOTER---------------------------- */
+
+  .footer-container {
+    height: 809px;
+    background-image: url("../../assets/images/gradient-bg-footer-320.png");
+  }
+  .footer-title {
+    font-size: 25px;
+    text-align: center;
+    /* width: 270px; */
+    padding-left: 39px;
+    /* margin-right: 0; */
+  }
+  .link-box-contacts {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-icon-contacts-email {
+    padding-left: 34px;
+    padding-bottom: 4px;
+  }
+  .link-email {
+    padding-right: 35px;
+  }
+  .link-tel {
+    padding-bottom: 5px;
+  }
+  .footer-icon-contacts-phone {
+    margin-left: 5px;
+    padding-bottom: 4px;
+    padding-left: 34px;
+  }
+  .title-locations {
+    width: 270px;
+    padding-left: 30px;
+    padding-top: 6px;
+  }
+  .link-box-locations {
+    padding-top: 40px;
+  }
+  .link-map {
+    padding-right: 8px;
+    padding-top: 0;
+  }
+  .footer-image {
+    padding-top: 40px;
+  }
+  .footer-puppy1 {
+    display: none;
+  }
+  .footer-puppy3 {
+    display: block;
   }
 }
