--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -34,7 +34,7 @@
     margin-left: 125px;
     padding-top: 15px;
   }
-  .not-only-image {
+  .not-only-image1 {
     display: none;
   }
   .not-only-image2 {
@@ -58,16 +58,46 @@
     margin-right: 0;
     padding-bottom: 55px;
   }
+  .about-image1 {
+    display: none;
+  }
   .about-image2 {
     padding-left: 0;
     display: block;
   }
-  .about-image {
-    display: none;
-  }
   .about-image3 {
     display: none;
   }
+  .modal-content {
+    max-width: 630px;
+    height: 350px;
+    margin: 10% auto;
+  }
+  .modal-image {
+    width: 350px;
+    height: 350px;
+  }
+  .modal-box {
+    margin-left: 350px;
+  }
+  .modal-title {
+    padding-top: 10px;
+  }
+  .modal-text {
+    padding-top: 18px;
+    padding-bottom: 0;
+    width: 275px;
+    font-size: 13px;
+    line-height: 110%;
+  }
+  li {
+    padding-bottom: 4px;
+    color: #f1cdb3;
+  }
+  .modal-span1 {
+    padding-left: 4px;
+  }
+
   /* ----------------------------OUR FRIENDS---------------------------- */
   .our-friends-title {
     padding-top: 80px;
@@ -123,7 +153,7 @@
     align-items: center;
     flex-direction: column-reverse;
   }
-  .in-addition-image {
+  .in-addition-image1 {
     margin-right: 0;
     margin-top: 60px;
   }
@@ -171,13 +201,15 @@
   .header-nav {
     display: none;
   }
-
   .hamburger {
     display: block;
     position: absolute;
     top: 40px;
     right: 53px;
     z-index: 2;
+  }
+  .hamburger.change {
+    transform: rotate(90deg);
   }
   .hamburger .line {
     width: 30px;
@@ -187,15 +219,6 @@
     margin: 8px auto;
     transition: all 0.3s ease-in-out;
     transition: 0.7s;
-  }
-  .hamburger.change .line-1 {
-    transform: translateY(13px) rotate(45deg);
-  }
-  .hamburger.change .line-2 {
-    opacity: 0;
-  }
-  .hamburger.change .line-3 {
-    transform: translateY(-13px) rotate(-45deg);
   }
   .hamburger:hover {
     cursor: pointer;
@@ -252,7 +275,7 @@
     /* padding-left: 10px; */
     /* height: 60px; */
   }
-  .not-only-image {
+  .not-only-image1 {
     display: none;
   }
   .not-only-image2 {
@@ -290,7 +313,7 @@
     display: flex;
     width: 270px;
   }
-  .about-image {
+  .about-image1 {
     display: none;
   }
   .about-image2 {
@@ -298,6 +321,33 @@
   }
   .about-image3 {
     display: block;
+  }
+
+  .modal-content {
+    max-width: 240px;
+    height: 341px;
+  }
+  .modal-image {
+    display: none;
+  }
+  .modal-box {
+    padding: 0;
+    margin: 0;
+  }
+  .modal-text {
+    margin-bottom: 22px;
+    padding-right: 0;
+    width: 220px;
+    height: 112px;
+    text-align: justify;
+  }
+  li {
+    float: left;
+  }
+  .modal-span1 {
+    padding-left: 5px;
+    padding-bottom: 0;
+    padding-top: 0;
   }
 
   /* ----------------------------OUR FRIENDS---------------------------- */
@@ -523,7 +573,7 @@
     transition: 0.7s;
     /* margin-left: 40px; */
   }
-  .in-addition-image {
+  .in-addition-image1 {
     display: none;
   }
   .in-addition-image3 {
