feat: add page pets adaptive 768

--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -585,7 +585,7 @@
 
   .footer-container {
     height: 809px;
-    background-image: url("../../assets/images/gradient-bg-footer-320.png");
+    background-image: url("../../assets/images/gradient-bg-footer-320.jpg");
   }
   .footer-title {
     font-size: 25px;
