--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1,8 +1,3 @@
-body {
-  /* width: 1280px; */
-  /* width: 100%; */
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -362,6 +357,11 @@ html {
   flex-direction: column;
   align-items: center;
   background: #fafafa;
+  border-radius: 9px;
+}
+
+.card:hover {
+  background: #ffffff;
 }
 
 .card-image {
